--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#9566AC</color>
+    <color name="colorPrimaryDark">#00FFFFFF</color> //set to translucent for the sake of a clean design
     <color name="colorAccent">#D81B60</color>
 </resources>
