--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-
-        android:layout_marginBottom="44dp"
-        android:text="Tap For Compliment"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#4B000000"
-        android:textSize="24dp"
-        android:typeface="normal"
-        app:layout_constraintBottom_toTopOf="@+id/btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
     <ImageView
         android:id="@+id/btn"
@@ -34,12 +14,13 @@
         android:layout_height="183dp"
         android:layout_gravity="center"
 
+        android:layout_marginTop="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        app:layout_constraintVertical_bias="0.445"
+        app:layout_constraintVertical_bias="0.219"
         app:srcCompat="@drawable/watercolour" />
 
     <TextView
@@ -49,18 +30,18 @@
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
 
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="..."
+        android:text="Tap For Compliment"
         android:textSize="18dp"
         app:fontFamily="serif-monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn" />
+        app:layout_constraintTop_toBottomOf="@+id/btn"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
