Fixed grey status bar on start

--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -14,7 +14,7 @@
 
         <!--translucent status bar and navigation bar-->
         <item name="android:windowTranslucentNavigation">false</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowLightNavigationBar">true</item>
